[package]
name = "es_cheaper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
opensearch = "2.0.0"
serde = "1.0.149"
serde_json = "1.0"
env_logger = "0.10.0"
clap = { version = "4.0.29", features = ["derive"] }
actix-identity = "0.5.2"
argon2 = "0.4.1"

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde"
]
