[package]
name = "es_cheaper"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
opensearch = "2.0.0"
serde = "1.0.149"
serde_json = "1.0"
env_logger = "0.10.0"
clap = { version = "4.0.29", features = ["derive"] }
actix-identity = "0.5.2"
argon2 = "0.4.1"
serde-partial = "0.3.1"
log = "0.4.17"
chrono = "0.4.23"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
uuid = {version = "1.2.2", features = ["v4", "fast-rng", "macro-diagnostics", "serde"]}
